fixed the page for the table
Fixed the table page, even with lack of resources about the palette and icons.

--- a/02092021/css/page.one.scss
+++ b/02092021/css/page.one.scss
@@ -2,3 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --slate-gray:   #6B7E8B;
+    --slate-orange: #FC5404;
+}
+
+* { font-family: 'Roboto', sans-serif !important; }
+
+.bg-slate-gray                                         { background-color: var(--slate-gray) !important; }
+.bg-slate-orange                                       { background-color: var(--slate-orange) !important;} 
+
+.text-slate-gray                                       { color:            var(--slate-gray) !important; }
+.text-slate-orange                                     { color:            var(--slate-orange) !important; }
+
+.border-slate-gray                                     { border-color:     var(--slate-gray) !important; }
+.border-slate-orange                                   { border-color:     var(--slate-orange) !important; }
+
+.yes-checkmark                                         { display: none !important; }
+.font-opensans                                         { font-family: 'Open Sans', sans-serif !important; }
+.text-size-medium                                      { font-size: 0.8rem !important; }
+
+input[type='checkbox']:checked + .yes                  { @apply border-yellow-500; }
+input[type='checkbox']:checked + div .yes-checkmark    { @apply block !important; }
+
+.pagination-button                                     { 
+    border-width:     0.129rem !important;
+}
