fixed the page two with modal

--- a/02092021/css/page.two.scss
+++ b/02092021/css/page.two.scss
@@ -1,8 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('../node_modules/charts.css/dist/charts.min.css');
 
 html, body {
+    max-width: 100vw !important;
     background: linear-gradient(190.17deg, #5957DA 18.69%, #16164E 93.88%);
 }
 
@@ -42,6 +44,11 @@ html, body {
     height: 120px;
     color: #7ED321;
 }
+.rounded-counter-small {
+    width: 90px;
+    height: 90px;
+    color: #7ED321;
+}
 .bg-tempo {
     background: linear-gradient(180deg, #7030A0 0%, #FF0000 26.04%, #FFC000 50%, #FFFF00 74.48%, #92D050 100%);
     min-height: 100% !important;
@@ -49,5 +56,31 @@ html, body {
 .bg-info {
     background-color: #34337E;
 }
-.radial-counter {
+.progress-ring__circle {
+    stroke-dasharray: 3 10;
+    z-index: 10;
+    top: 120px !important;
 }
+.progress-ring__small {
+    stroke-dasharray: 3 10;
+    z-index: 10;
+    top: 28px !important;
+}
+.progress-ring__small_box {
+    stroke-dasharray: 3 10;
+    z-index: 10;
+    top: -10px !important;
+}
+.radial-counter-small {
+    max-height: 10px;
+}
+.bg-modal {
+    background: linear-gradient(190.17deg, #5A58DA 18.69%, #1D1D5B 93.88%);
+    box-shadow: 0px 4px 10px 1px #000000;
+    border-radius: 10px;
+}
+.h-bar     { 
+    width: 0.25px;
+    height: 300px; 
+}
+.text-blue { color: #2ECEE2; }
